[workspace]
members = [
    "bin",
    "integration",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
ethers-core = "=2.0.7"
ethers-providers = "=2.0.7"
glob = "0.3"
itertools = "0.10"
log = "0.4"
log4rs = { version = "1.2", default_features = false, features = ["console_appender", "file_appender"] }
rand = "0.8"
rand_xorshift = "0.3"
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }

halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
prover = { git = "https://github.com/LimeChain/scroll-zkevm-circuits", branch = "LimeChain/wip-block-hashes-poc", default-features = false, features = ["parallel_syn", "scroll", "shanghai"] }
zkevm-circuits = { git = "https://github.com/LimeChain/scroll-zkevm-circuits", branch = "LimeChain/wip-block-hashes-poc", default-features = false, features = ["parallel_syn", "scroll", "shanghai"] }

integration = { path = "integration" }

[patch.crates-io]
ethers-core = { git = "https://github.com/LimeChain/scroll-ethers-rs.git", branch = "LimeChain/l1-block-hashes-poc" }
ethers-providers= { git = "https://github.com/LimeChain/scroll-ethers-rs.git", branch = "LimeChain/l1-block-hashes-poc" }
[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "main" }

[profile.test]
opt-level = 3
debug-assertions = true

[profile.release]
opt-level = 3
debug-assertions = true
